<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/curve_edges"
            app:behavior_hideable="true"
            app:behavior_peekHeight="42dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
                android:id="@+id/bottom_sheet_head"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen_8"
                android:layout_marginTop="@dimen/dimen_4"
                android:layout_marginRight="@dimen/dimen_8"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="@dimen/dimen_2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/bus_name_tag"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_8"
                    android:layout_weight="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:text="@string/schedules"/>

            <ImageView
                    android:id="@+id/dismiss_dialog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/cross_multiply_38"
                    android:contentDescription="@string/close_bottom_sheet"/>

        </LinearLayout>

        <View
                app:layout_constraintTop_toBottomOf="@id/bottom_sheet_head"
                android:id="@+id/line"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:background="@color/greyBD"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>

        <com.github.ybq.android.spinkit.SpinKitView
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/spin_kit"
                style="@style/SpinKitView.Large.ThreeBounce"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:SpinKit_Color="@color/greyBD"/>


        <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rc_tags_items"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintLeft_toLeftOf="@id/bottom_sheet_head"
                app:layout_constraintRight_toRightOf="@id/bottom_sheet_head"
                app:layout_constraintTop_toBottomOf="@id/line"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>