<resources>
    <string name="app_name">Airlines</string>
    <string name="title_activity_maps">Map</string>
    <string name="airport_origin">Airport Origin</string>
    <string name="airport_destination">Airport Destination</string>
    <string name="schedules">Schedules</string>
    <string name="days_of_operation">Days of Operation:</string>
    <string name="close_bottom_sheet">close bottom sheet</string>


</resources>
