<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
>
    <data>

    </data>
    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <fragment
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/map"
                tools:context=".ui.MapsActivity"
                android:name="com.google.android.gms.maps.SupportMapFragment"/>

        <include
                android:id="@+id/cont"
                layout="@layout/map_content"/>

    </FrameLayout>
</layout>
